# meteo-station

./: .env.schema  README.md  TODO  notes.md  package-lock.json  package.json  reference.txt  update_todos.sh
c-server/: .gitignore  HandleClient.c  Makefile  _database.c  _database.h  _parse.c  _parse.h  _utils.c  _utils.h  auth.c  auth.h  build_response.c  build_response.h  constants.h  env.sh.template  extract_header.c  extract_header.h  handle_client.c  main.c  run.sh
circuits/board/: board.kicad_pro  board.kicad_sch
common/: base64_decode.h  base64_encode.h  get_current_timestamp.h  jsonArrayFromStrings.h  json_array_from_anything.h  json_array_from_strings.h  power.h
db/: env.sh.template  update_database.sh
db/sql/: 0_0_1.sql  0_0_2.sql  update_db.sql
device/: .gitignore  Makefile  config.h  dht22.h  env.sh.template  httpRequests.h  main.c  pms5003.h  reference.txt  run.sh  test  test.c  utils.h
esp-device/: .gitignore  CMakeLists.txt  README.md  build_all.sh  env.sh.template
esp-device/main/: CMakeLists.txt  main.c
esp-device/main/c/: http_client.c  network.c  pms5003.c  time.c  utils.c
esp-device/main/include/: dto.h  http_client.h  network.h  pms5003.h  time.h  types.h  utils.h
frontend/: .gitignore  App.tsx  notatki.txt  package-lock.json  package.json
go-server/: .gitignore  build.sh  env.sh.template  go.mod  init.sh  install.sh  main.go  meteo-station-server.service  run.sh
server/: .env.template  .gitignore  CHANGELOG.md  _database.c  _utils.c  _utils.h  auth.h  env.sh.template  handle_client.c  handle_client.h  main.c  package-lock.json  package.json  run.sh
src/: .environments.ts.swp  constants.ts  environments.ts  index.ts
(+22 files in other folders)
